--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -2,7 +2,7 @@
   ul.rslides
     li
       a href="/dresses/graduation"
-        = image_tag "taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'        
+        = image_tag "taste-of-fame2.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
       a href="/prom-collection"
         = image_tag "prom.jpg", alt: 'Prom Collection', class: 'img-responsive portrait-img'
