[fix] remove https on robots.txt due to cloudflare + AWS SSL

--- a/app/views/robots/production.text.erb
+++ b/app/views/robots/production.text.erb
@@ -18,4 +18,4 @@ Disallow: /account
 Disallow: /faqs
 Disallow: /terms
 
-Sitemap: https://images.fameandpartners.com/sitemap/sitemap.xml.gz
+Sitemap: http://images.fameandpartners.com/sitemap/sitemap.xml.gz
