[fix][campaign monitor] little more data to track

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -26,6 +26,7 @@
 
   #email-capture-fields.hidden
     input type="hidden" name="content" value=content
+    input type="hidden" name="promocode" value=promocode
     .row.no-padding
       .col-md-8.col-md-offset-2.text-center
         input.form-control.standard-form type="email" name="email" placeholder='email address'
