[fix] Home page tile should link to /dresses

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -1,7 +1,7 @@
 .page-content.index
   ul.rslides
     li
-      a href="/dresses/graduation"
+      a href="/dresses"
         = image_tag "taste-of-fame2.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
       a href="/prom-collection"
