--- a/app/views/layouts/redesign/application.html.slim
+++ b/app/views/layouts/redesign/application.html.slim
@@ -1,7 +1,21 @@
 doctype html
-= conditional_html do
-  head
 
+/!
+  Fame & Partners!
+    
+    \
+     \ji
+     /.(((
+    (,/"(((__,--.
+        \  ) _( /{
+        !|| " :||
+        !||   :||
+        '''   '''
+  
+   And Unicorns
+
+= conditional_html do
+  head      
     link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0-beta.3/css/select2.min.css"
 
     = stylesheet_link_tag '//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700'
