[feat][admin] Orders screen improvments
- [x] max width the table
- [x] add factory
- [x] add colour & SLA timeframe for shipping date
- [x] filter by sky and name
- [x] form to add tracking number and ship from orders line items view
- lots more

--- a/app/assets/stylesheets/spree/admin/admin.css.scss
+++ b/app/assets/stylesheets/spree/admin/admin.css.scss
@@ -168,3 +168,10 @@ ul.clean {
     list-style-type: none;
   }
 }
+
+// Force the admin container to max-width.
+// If you don't use the spree admin numbered columns classes, you get a full width view.
+.container {
+    width: inherit!important;
+    padding: 0 0.5rem;
+}
