--- a/app/views/spree/layouts/admin.html.erb
+++ b/app/views/spree/layouts/admin.html.erb
@@ -89,7 +89,7 @@
         </div>
       <% end %>
 
-      <div class="container">
+      <div class="container-fullwide container">
         <div class="row">
           <div class="<%= 'with-sidebar ' if content_for?(:sidebar) %>" id="content" data-hook>
 
