--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -1,87 +1,33 @@
 <% content_for :page_title do %>
-  <%= t(:listing_orders) %>
+  <%== page_entries_info @orders, entry_name: t(:orders) %>
 <% end %>
 
 <% content_for :page_actions do %>
+  <li>
+    <%= paginate @orders %>
+  </li>
   <li>
     <%= button_link_to t(:new_order), new_admin_order_url, :icon => 'icon-plus', :id => 'admin_new_order' %>
   </li>
 <% end %>
 
 <% content_for :table_filter_title do %>
-  <%= t(:search) %>
+
 <% end %>
 
 <% content_for :table_filter do %>
     <%= render partial: 'spree/admin/orders/index/table_filter' %>
 <% end %>
 
-<table class="index responsive" id="listing_orders" data-hook>
-  <colgroup>
-     <col style="width: 16%;">
-     <col style="width: 10%;">
-     <col style="width: 13%;">
-     <col style="width: 13%;">
-     <col style="width: 13%;">
-     <col style="width: 17%;">
-     <col style="width: 10%;">
-     <col style="width: 8%;">
-  </colgroup>
-  <thead>
-    <tr data-hook="admin_orders_index_headers">
-      <% if @show_only_completed %>
-        <th><%= sort_link @search, :completed_at, t(:completed_at, :scope => 'activerecord.attributes.spree/order') %></th>
-      <% else %>
-        <th><%= sort_link @search, :created_at,   t(:created_at, :scope => 'activerecord.attributes.spree/order') %></th>
-      <% end %>
-      <th><%= sort_link @search, :projected_delivery_date, 'Projected Delivery' %> </th>
-      <th><%= sort_link @search, :number,         t(:number, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th><%= sort_link @search, :tracking,       'Tracking ' %></th>
-      <th><%= sort_link @search, :state,          t(:state, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th><%= sort_link @search, :payment_state,  t(:payment_state, :scope => 'activerecord.attributes.spree/order') %></th>
-      <% unless hide_line_items %>
-        <th>Make State</th>
-      <% end %>
-      <th><%= sort_link @search, :shipment_state, t(:shipment_state, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th><%= sort_link @search, :email,          t(:email, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th style="min-width:100px;"><%= sort_link @search, :customer_notes, 'Notes' %></th>
-      <th><%= sort_link @search, :total,          t(:total, :scope => 'activerecord.attributes.spree/order') %></th>
-      <th data-hook="admin_orders_index_header_actions" class="actions"></th>
-    </tr>
-  </thead>
-  <tbody>
+</div>
+<!-- Close our friendly spree whacky container div-->
 
-  <% @orders.each do |order| %>
-    <% current_row_class = cycle('odd', 'even') %>
-    <tr data-hook="admin_orders_index_rows" class="state-<%= order.state.downcase %> <%= current_row_class %>">
-      <td class="align-center"><%= l (@show_only_completed ? order.completed_at : order.created_at).to_date %></td>
-      <td class="align-center">
-        <% if order.projected_delivery_date.present? %>
-          <%= l order.projected_delivery_date.to_date %>
-        <% else %>
-          -
-        <% end %>
-      </td>
-      <td><%= link_to order.number, admin_order_path(order) %></td>
-      <td><%= order.shipments.first.tracking if order.shipments.any? %></td>
-      <td class="align-center"><span class="state <%= order.state.downcase %>"><%= t("order_state.#{order.state.downcase}") %></span></td>
-      <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
-      <% unless hide_line_items %>
-          <td></td>
-      <% end %>
-      <td class="align-center"><span class="state <%= order.shipment_state %>"><abbr title="<%=t("shipment_states.#{order.shipment_state}")%>"><%= link_to order.shipment_state, admin_order_shipments_path(order) if order.shipment_state %></abbr></span></td>
-      <td><%= mail_to order.email %></td>
-      <td><%= order.customer_notes %></td>
-      <td class="align-center"><%= order.display_total %></td>
-      <td class='actions align-center' data-hook="admin_orders_index_row_actions">
-        <%= link_to_edit_url edit_admin_order_path(order), :title => "admin_edit_#{dom_id(order)}", :no_text => true %>
-      </td>
-    </tr>
-      <% unless hide_line_items %>
-          <%= render 'spree/admin/orders/index/line_items', current_row_class: current_row_class, order: order %>
-      <% end %>
-  <% end %>
-  </tbody>
-</table>
+<div class="container-fullwide">
+<% if hide_line_items %>
+<%= render 'orders_table' %>
+<% else %>
+<%= render 'line_items_table', orders: @orders %>
+<% end %>
+</div>
 
 <%= paginate @orders %>
