[feat] Update home page tiles

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -197,7 +197,7 @@ ruby:
           li.shop.menu-item.account-dropdown
             = render "layouts/redesign/header/my_account_dropdown"
 
-          li.menu-item.hidden-xxs
+          li.menu-item
             a.menu-item--link.search href="#"
               = image_tag "search.png"
             .search-bar.invis
