--- a/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
+++ b/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
@@ -5,6 +5,8 @@
     .account.container-fluid
       ul
         li
+          = link_to 'My Moodboard', id: 'moodboard-trigger'
+        li
           = link_to 'My Details', profile_path
         li
           = link_to 'My Orders', user_orders_path
