[feat] More banner

--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -5,10 +5,14 @@
         = image_tag "home-page-tiles/taste-of-fame.jpg", alt: 'Taste of Fame', class: 'img-responsive portrait-img'
     li
       a href="/dresses/graduation"
-        = image_tag "home-page-tiles/graduation-#{current_site_version.code}.jpg", alt: 'Graduation Dresses', class: 'img-responsive portrait-img'        
+        = image_tag "home-page-tiles/graduation-#{current_site_version.code}.jpg", alt: 'Graduation Dresses', class: 'img-responsive portrait-img'
     li
       a href="/prom-collection"
         = image_tag "home-page-tiles/prom.jpg", alt: 'Prom Collection', class: 'img-responsive portrait-img'
+    li
+      a href="/bridesmaid-dresses"
+        = image_tag "home-page-tiles/bridesmaids.jpg", alt: 'Bridesmaid Dresses', class: 'img-responsive portrait-img'
+
 
 /! Email Subscription
 #email-container.container-fluid.email-sub.text-center
