[ref] extract sitemap url to configatron file

--- a/app/views/robots/production.text.erb
+++ b/app/views/robots/production.text.erb
@@ -18,4 +18,4 @@ Disallow: /account
 Disallow: /faqs
 Disallow: /terms
 
-Sitemap: http://images.fameandpartners.com/sitemap/sitemap.xml.gz
+Sitemap: <%= configatron.sitemap_url %>
