--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -28,12 +28,12 @@
                   td = link_to order.number, user_order_path(order), remote: true
                   td = l(order.updated_at.to_date)
                   td = order_payment_state(order)
-                  td = order_shipment_state(order)
+                  td = order_status(order)
                   td
                     - if order.shipped?
                       - order.shipments.each do | shipment|
-                        = link_to shipment.tracking, shipment_tracking_url(shipment), target:'_blank'
+                        = link_to shipment.tracking || 'Track', shipment_tracking_url(shipment), target:'_blank'
                     - else
-                      | Not shipped
+                      | Not yet shipped
 
                   td = order.display_total
