[tweak] update edits slideshows
stops heads from being cut off

--- a/app/views/landing_pages/break-hearts-not-banks.html.slim
+++ b/app/views/landing_pages/break-hearts-not-banks.html.slim
@@ -1,46 +1,26 @@
 = render :partial => 'landing_pages/common'
 
 .page-content.index.break-hearts-not-banks
-  .container.relative
-    .row.relative
-  #theTarget style=("height: 720px;")
+  ul.rslides
 
-    div.i
-      .slider-image-caption.height-100
-        .container.height-100
-          h1.text-center.edit-title.text-white break hearts not<br>bank accounts collection
-
-    div.ii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iv
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.v
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vi
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.viii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.ix
-      .slider-image-caption.height-100
-        .container.height-100
+    li
+      = image_tag "edits/BREAK-HEARTS/1_141119_F&P_NYE_01_0044.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/2_141119_F&P_NYE_04_0226.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/3_141119_F&P_NYE_05_0295HR.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/4_141119_F&P_NYE_07_0422s.jpg", alt: 's', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/5_141119_F&P_NYE_12_0709.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/6_141119_F&P_NYE_08_0448.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/7_141119_F&P_NYE_09_0510.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/8_171114_F&P_-BRIDESMAIDS_Shot_6_472.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BREAK-HEARTS/9_141119_F&P_NYE_02_0123-1.jpg", alt: '', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
