--- a/app/views/landing_pages/bridesmaids.html.slim
+++ b/app/views/landing_pages/bridesmaids.html.slim
@@ -2,42 +2,24 @@
   = raw "$('.img-product').hoverable();"
 
 .page-content.index.bridesmaids
-  .container.relative
-    .row.relative
-  #theTarget style=("height: 720px;")
+  ul.rslides
 
-    div.i
-      .slider-image-caption.height-100
-        .container.height-100
-          h1.text-center.edit-title.text-white our beautiful<br>bridesmaids collection
-
-    div.ii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iv
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.v
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vi
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.viii
-      .slider-image-caption.height-100
-        .container.height-100
+    li
+      = image_tag "edits/BRIDESMAIDS/1_171114_F&P_-BRIDESMAIDS_Shot_2_129.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/2_171114_F&P_-BRIDESMAIDS_Shot_1_006.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/3_171114_F&P_-BRIDESMAIDS_Shot_3_211.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/4_171114_F&P_-BRIDESMAIDS_Shot_3_230-1.jpg", alt: 's', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/5_171114_F&P_-BRIDESMAIDS_Shot_4_299.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/6_171114_F&P_-BRIDESMAIDS_Shot_5_378.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/7_171114_F&P_-BRIDESMAIDS_Shot_8_635.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/BRIDESMAIDS/8_171114_F&P_-BRIDESMAIDS_Shot_6_472.jpg", alt: '', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
