--- a/app/views/landing_pages/prom.html.slim
+++ b/app/views/landing_pages/prom.html.slim
@@ -1,50 +1,28 @@
 = render :partial => 'landing_pages/common'
 
 .page-content.index.prom-landing
-  .container.relative
-    .row.relative
-  #theTarget style=("height: 720px;")
+  ul.rslides
 
-    div.i
-      .slider-image-caption.height-100
-        .container.height-100
-          h1.text-center.edit-title.text-white.prom-title our official<br>prom collection
-
-    div.ii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iv
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.v
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vi
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.viii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.ix
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.x
-      .slider-image-caption.height-100
-        .container.height-100
+    li
+      = image_tag "edits/real_prom/1_REALPROM_03_035_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/2_REALPROM_02_120_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/3_REALPROM_02_143_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/4_REALPROM_02_146_ret.jpg", alt: 's', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/5_REALPROM_05_078_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/6_REALPROM_05_106.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/7_REALPROM_05_113.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/8_REALPROM_01_137_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/9_REALPROM_01_033.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/real_prom/10_REALPROM_04_057_ret.jpg", alt: '', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
