--- a/app/views/landing_pages/wicked_game.html.slim
+++ b/app/views/landing_pages/wicked_game.html.slim
@@ -1,59 +1,32 @@
 = render :partial => 'landing_pages/common'
 
 .page-content.index.amfam
-  .container.relative
-    .row.relative
-  #theTarget style=("height: 720px;")
-
-    div.i
-      .slider-image-caption.height-100
-        .container.height-100
-          h1.text-center.edit-title the wicked game<br> collection
-
-    div.ii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.iv
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.v
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vi
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.vii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.viii
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.ix
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.x
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.xi
-      .slider-image-caption.height-100
-        .container.height-100
-
-    div.xii
-      .slider-image-caption.height-100
-        .container.height-100
-
+  ul.rslides
+  
+    li
+      = image_tag "edits/AMFAM/1F&PAMFAM.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/2_141223_F&P_ALLMYFRIENDSAREMODELS_12_0928.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/3_141223_F&P_ALLMYFRIENDSAREMODELS_03_0959.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/4_141223_F&P_ALLMYFRIENDSAREMODELS_05_0311.jpg", alt: 's', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/5_141223_F&P_ALLMYFRIENDSAREMODELS_08_0600-1.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/6_141223_F&P_ALLMYFRIENDSAREMODELS_08_0625.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/7_141223_F&P_ALLMYFRIENDSAREMODELS_06_0348.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/8_141223_F&P_ALLMYFRIENDSAREMODELS_07_0474.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/9_141223_F&P_ALLMYFRIENDSAREMODELS_09_0682i.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/10_141223_F&P_ALLMYFRIENDSAREMODELS_11_0770c.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/11_141223_F&P_ALLMYFRIENDSAREMODELS_10_0718.jpg", alt: '', class: 'img-responsive portrait-img'
+    li
+      = image_tag "edits/AMFAM/12_141223_F&PAMFAM_SHOT_2_1916.jpg", alt: '', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
