--- a/app/assets/stylesheets/redesign/_user.css.scss
+++ b/app/assets/stylesheets/redesign/_user.css.scss
@@ -70,6 +70,10 @@ h2.order-number {
 
   tbody tr.item  {
     border-bottom: 2px solid #ddd;
+
+    td {
+      vertical-align: top;
+    }
   }
 }
 
