--- a/app/views/users/orders/index.html.slim
+++ b/app/views/users/orders/index.html.slim
@@ -28,7 +28,12 @@
                   td = link_to order.number, user_order_path(order), remote: true
                   td = l(order.updated_at.to_date)
                   td = order_payment_state(order)
-                  td = order_status(order)
+                  td
+                    - if order.line_items.one?
+                      = order_status(order)
+                    - else
+                      = link_to 'Click for details', user_order_path(order)
+                     
                   td
                     - if order.shipped?
                       - order.shipments.each do | shipment|
