--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -15,6 +15,7 @@ table.line_items
       th Customisations
       th Factory
       th Customer
+      th Customer Notes
       th Make State
       th Shipping
       th Actions
@@ -28,8 +29,8 @@ table.line_items
           td = maybe_date(order.projected_delivery_date)
           td
             - ship_state = ShippingStatePresenter.new(line_item)
-            span class="state-#{ship_state.delivery_state}"
-              = ship_state.present
+            abbr title=ship_state.delivery_state class="state-#{ship_state.delivery_state}"
+              = ship_state.overdue_by
           td = link_to order.number, edit_admin_order_path(order)
           td = line_item.id
           td = line_item.variant.sku
@@ -37,6 +38,9 @@ table.line_items
           td = line_item.customisations.collect(&:first).join(', ')
           td = line_item.factory
           td = line_item.shipping_address
+          td
+            abbr title=order.customer_notes
+              = truncate(order.customer_notes)
           td
             - if line_item.fabrication.try(:state) == 'shipped'
               = Fabrication::STATES[line_item.fabrication.state]
