[fix] Links, how do they even?

--- a/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
+++ b/app/views/layouts/redesign/header/_my_account_dropdown.html.slim
@@ -5,7 +5,7 @@
     .account.container-fluid
       ul
         li
-          = link_to 'My Moodboard', id: 'moodboard-trigger'
+          = link_to 'My Moodboard', wishlist_path, id: 'moodboard-trigger'
         li
           = link_to 'My Details', profile_path
         li
