--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -33,7 +33,7 @@ table.line_items
               = ship_state.overdue_by
           td = link_to order.number, edit_admin_order_path(order)
           td = line_item.id
-          td = line_item.variant.sku
+          td = line_item.style_number
           td = line_item.style_name
           td = line_item.customisations.collect(&:first).join(', ')
           td = line_item.factory
