--- a/app/assets/stylesheets/admin/all.css
+++ b/app/assets/stylesheets/admin/all.css
@@ -14,6 +14,5 @@
 *= require admin/spree_social
 *= require jquery.fileupload-ui
 *= require admin/spree_paypal_express
-*= require jquery.ui.tabs
+*= require jquery-ui/tabs
 */
-
