[feat] Simple contact form that emails to desk

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -27,6 +27,7 @@
 @import 'redesign/facebook';
 @import 'redesign/registration';
 @import 'redesign/style_consult';
+@import 'redesign/contact';
 @import 'redesign/fashionista_winner';
 @import 'redesign/index';
 @import 'redesign/typography';
