--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -59,28 +59,26 @@ ruby:
             - if @order.shipment.is_dhl?
               p
                 ' Track your order with DHL:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  DHL [#{ @order.shipment.tracking }]
+                = link_to "[#{ @order.shipment.tracking }]", shipment_tracking_url(@order.shipment), target: '_blank'
+                  
             - elsif @order.shipment.is_auspost?
               p
                 ' Track your order with Australia Post:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  AUSPOST [#{ @order.shipment.tracking }]
+                = link_to "[#{ @order.shipment.tracking }]", shipment_tracking_url(@order.shipment), target: '_blank'
             - elsif @order.shipment.is_tnt?
               p
                 ' Track your order with TNT:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  TNT [#{ @order.shipment.tracking }]
+                = link_to "[#{ @order.shipment.tracking }]", shipment_tracking_url(@order.shipment), target: '_blank'
             - else
               h3 Tracking Number
               p.labeled = @order.shipment.number
 
         - if successfully_ordered
           h3 Customer Support
-          p 
-            ' Check out our 
+          p
+            ' Check out our
             =' link_to 'Support Site', 'http://support.fameandpartners.com', target: '_blank'
-            ' or read our 
+            ' or read our
             =' link_to 'FAQs.', 'http://fameandpartners.com/faqs', target: '_blank'
           p Or otherwise contact our friendly team if you need any help.
           p = link_to 'team@fameandpartners.com', 'mailto:team@fameandpartners.com'
