[tweak]: update file paths

--- a/app/views/landing_pages/prom.html.slim
+++ b/app/views/landing_pages/prom.html.slim
@@ -4,25 +4,23 @@
   ul.rslides
 
     li
-      = image_tag "edits/real_prom/1_REALPROM_03_035_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/1.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/2_REALPROM_02_120_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/2.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/3_REALPROM_02_143_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/3.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/4_REALPROM_02_146_ret.jpg", alt: 's', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/4.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/5_REALPROM_05_078_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/5.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/6_REALPROM_05_106.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/6.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/7_REALPROM_05_113.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/7.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/8_REALPROM_01_137_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/8.jpg", alt: '', class: 'img-responsive portrait-img'
     li
-      = image_tag "edits/real_prom/9_REALPROM_01_033.jpg", alt: '', class: 'img-responsive portrait-img'
-    li
-      = image_tag "edits/real_prom/10_REALPROM_04_057_ret.jpg", alt: '', class: 'img-responsive portrait-img'
+      = image_tag "edits/real_prom/9.jpg", alt: '', class: 'img-responsive portrait-img'
 
   .page-content.products-collections.category
     .container.relative.products-collection
